# guile-config

./: .gitignore  AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README  README.org  conf.scm  config.scm  configure.ac  guix.scm  hall.scm  monads.scm  pre-inst-env.in  test-env.in
conf/: getopt.scm  monads.scm  parser.scm  spec.scm  spec.scm.in
conf/monads/: io.scm
config/: api.scm  config-spec.scm  getopt-long.scm  getopt.scm  helpers.scm  licenses.scm  parser.scm  parsers.scm  records.scm  spec.scm
config/parser/: sexp.scm
doc/: conf.texi  config.texi
examples/: frobnigator.scm  hello-world.scm  simple.scm
monads/: io.scm
po/: Makevars  POTFILES.in
quickcheck/: quickcheck.scm
tests/: conf.scm  config.scm  getopt-long.scm  getopt.scm  monads.scm  quickcheck-defs.scm  quickcheck.scm  spec.scm
